# cube

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  bun.lockb  index.html  index.js  main.js  package.json  scene.js  vite.config.js
public/: index.html
public/z1/: script.py
source/: CMakeLists.txt  main.cpp
src/: config.h  glad.c  glad.h  main.cpp  main.js
