cmake_minimum_required(VERSION 3.26)

set(CPP_MASTERS_PROJECT_NAME "cpp-masters")
set(CPP_MASTERS_EXE_TARGET_NAME "${CPP_MASTERS_PROJECT_NAME}-exe")

project(${CPP_MASTERS_PROJECT_NAME})

set(CPP_MASTERS_SOURCE_CPP_FILES
	"${CMAKE_CURRENT_SOURCE_DIR}/source/main.cpp"
)

set(CPP_MASTERS_SOURCE_HEADER_FILES

)

set(CPP_MASTERS_SOURCE_CODE
	${CPP_MASTERS_SOURCE_CPP_FILES}
	${CPP_MASTERS_SOURCE_HEADER_FILES}
)

add_executable("${CPP_MASTERS_EXE_TARGET_NAME}" ${CPP_MASTERS_SOURCE_CODE})